...
                        applicationVersion: 'Version 1.0',
                        applicationLegalese:
                            'ScanGo is a Self-Checkout Mobile Application.\n\n'
                            'Scan->Add->Check->Pay->Go');
                  },
                  dense: true,
                  title: Text("About App", style: Constants.regularDarkText),
                  leading: Icon(
                    Icons.info,
                    color: Theme.of(context).primaryColor,
                  ),
                ),
                ListTile(
...
