...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: Color(0xfff5f5f5),
      appBar: AppBar(
        title: Text(
          "Cart History",
          style: Constants.boldHeadingAppBar,
        ),
        backgroundColor: Color(0xff1faa00),
      ),
      body: StreamBuilder<QuerySnapshot>(
        stream: _firebaseServices.usersCartHistoryRef
...
